1.Introduced unit tests for the ReservationsRepository.kt functionalities. 2.Modified the testing setup to utilize Mockito instead of Mockk, due to issues with testing performance and incompatibilities. 3. Introduced helper classes that enabled deeper unit-testing.